feature section completed

--- a/index.html
+++ b/index.html
@@ -124,7 +124,43 @@
         </div>
       </section>
     </header>
-    <main></main>
+    <main class="xl:container w-9/10 mx-auto">
+      <!-- feature bikes in this year -->
+      <section class="mt-16">
+        <div class="text-center">
+          <h1 class="lg:text-5xl text-2xl font-semibold">
+            Fetured Bikes In This Year
+          </h1>
+          <small class="font-semibold text-sm custom-color"
+            >Best bike collection</small
+          >
+          <hr class="w-[58px] custom-color mx-auto" />
+        </div>
+        <div class="my-24 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5">
+          <div>
+            <img
+              src="./images/others/feature-bike.png"
+              alt=""
+              class="grayscale-100 mx-auto"
+            />
+          </div>
+          <div>
+            <img
+              src="./images/others/feature-bike.png"
+              alt=""
+              class="mx-auto"
+            />
+          </div>
+          <div>
+            <img
+              src="./images/others/feature-bike.png"
+              alt=""
+              class="grayscale-100 mx-auto"
+            />
+          </div>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
