--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Biker Zone</title>
     <!-- google-fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -157,6 +157,83 @@
               alt=""
               class="grayscale-100 mx-auto"
             />
+          </div>
+        </div>
+      </section>
+      <!-- Latest News -->
+      <section class="">
+        <h1 class="lg:text-5xl text-2xl font-semibold text-center">
+          Latest News
+        </h1>
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 mt-12 gap-5">
+          <!-- card one -->
+          <div class="card bg-base-100 xl:w-96 drop-shadow-sm pt-6">
+            <figure>
+              <img src="./images/others/latest1.png" alt="" />
+            </figure>
+            <div class="card-body">
+              <h2 class="card-title text-2xl md:text-3xl">
+                Ducati XDIAVEL S-73
+              </h2>
+              <p class="text-base leading-8 mb-4">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
+                fermentum amet faucibus sed id nisi lectus at.
+              </p>
+              <div class="card-actions">
+                <button>
+                  <a
+                    class="btn btn-error bg-[#e76f51] text-white font-medium text-base"
+                    >Read More</a
+                  >
+                </button>
+              </div>
+            </div>
+          </div>
+          <!-- card two -->
+          <div class="card bg-base-100 xl:w-96 drop-shadow-sm pt-6">
+            <figure>
+              <img src="./images/others/latest2.png" alt="" />
+            </figure>
+            <div class="card-body">
+              <h2 class="card-title text-2xl md:text-3xl">
+                Ducati XDIAVEL S-73
+              </h2>
+              <p class="text-base leading-8 mb-4">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
+                fermentum amet faucibus sed id nisi lectus at.
+              </p>
+              <div class="card-actions">
+                <button>
+                  <a
+                    class="btn btn-error bg-[#e76f51] text-white font-medium text-base"
+                    >Read More</a
+                  >
+                </button>
+              </div>
+            </div>
+          </div>
+          <!-- card three -->
+          <div class="card bg-base-100 xl:w-96 drop-shadow-sm pt-6">
+            <figure>
+              <img src="./images/others/latest3.png" alt="" />
+            </figure>
+            <div class="card-body">
+              <h2 class="card-title text-2xl md:text-3xl">
+                Ducati XDIAVEL S-73
+              </h2>
+              <p class="text-base leading-8 mb-4">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
+                fermentum amet faucibus sed id nisi lectus at.
+              </p>
+              <div class="card-actions">
+                <button>
+                  <a
+                    class="btn btn-error bg-[#e76f51] text-white font-medium text-base"
+                    >Read More</a
+                  >
+                </button>
+              </div>
+            </div>
           </div>
         </div>
       </section>
