latest news section re-constructed and completed

--- a/index.html
+++ b/index.html
@@ -162,75 +162,65 @@
       </section>
       <!-- Latest News -->
       <section class="">
-        <h1 class="lg:text-5xl text-2xl font-semibold text-center">
+        <h1 class="lg:text-5xl text-2xl font-semibold text-center mb-11">
           Latest News
         </h1>
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 mt-12 gap-5">
-          <!-- card one -->
-          <div class="card bg-base-100 xl:w-96 drop-shadow-sm pt-6">
+        <div
+          class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5 justify-items-center"
+        >
+          <div class="card bg-base-100 xl:w-96 shadow-sm p-6">
             <figure>
-              <img src="./images/others/latest1.png" alt="" />
+              <img src="./images/others/latest1.png" alt="Shoes" />
             </figure>
-            <div class="card-body">
-              <h2 class="card-title text-2xl md:text-3xl">
+            <div class="card-body p-0 mt-4">
+              <h2 class="card-title md:text-2xl text-xl">
                 Ducati XDIAVEL S-73
               </h2>
-              <p class="text-base leading-8 mb-4">
+              <p class="mb-4 text-gray-500">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
                 fermentum amet faucibus sed id nisi lectus at.
               </p>
               <div class="card-actions">
-                <button>
-                  <a
-                    class="btn btn-error bg-[#e76f51] text-white font-medium text-base"
-                    >Read More</a
-                  >
+                <button class="btn bg-[#e76f51] text-white font-bold">
+                  Read More
                 </button>
               </div>
             </div>
           </div>
           <!-- card two -->
-          <div class="card bg-base-100 xl:w-96 drop-shadow-sm pt-6">
+          <div class="card bg-base-100 xl:w-96 shadow-sm p-6">
             <figure>
-              <img src="./images/others/latest2.png" alt="" />
+              <img src="./images/others/latest2.png" alt="Shoes" />
             </figure>
-            <div class="card-body">
-              <h2 class="card-title text-2xl md:text-3xl">
-                Ducati XDIAVEL S-73
+            <div class="card-body p-0 mt-4">
+              <h2 class="card-title md:text-2xl text-xl">
+                Motorcycles & Scooters
               </h2>
-              <p class="text-base leading-8 mb-4">
+              <p class="mb-4 text-gray-500">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
                 fermentum amet faucibus sed id nisi lectus at.
               </p>
               <div class="card-actions">
-                <button>
-                  <a
-                    class="btn btn-error bg-[#e76f51] text-white font-medium text-base"
-                    >Read More</a
-                  >
+                <button class="btn bg-[#e76f51] text-white font-bold">
+                  Read More
                 </button>
               </div>
             </div>
           </div>
-          <!-- card three -->
-          <div class="card bg-base-100 xl:w-96 drop-shadow-sm pt-6">
+          <!-- card-three -->
+          <div class="card bg-base-100 xl:w-96 shadow-sm p-6">
             <figure>
-              <img src="./images/others/latest3.png" alt="" />
+              <img src="./images/others/latest3.png" alt="Shoes" />
             </figure>
-            <div class="card-body">
-              <h2 class="card-title text-2xl md:text-3xl">
-                Ducati XDIAVEL S-73
-              </h2>
-              <p class="text-base leading-8 mb-4">
+            <div class="card-body p-0 mt-4">
+              <h2 class="card-title md:text-2xl text-xl">2021 Honda CBR500R</h2>
+              <p class="mb-4 text-gray-500">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
                 fermentum amet faucibus sed id nisi lectus at.
               </p>
               <div class="card-actions">
-                <button>
-                  <a
-                    class="btn btn-error bg-[#e76f51] text-white font-medium text-base"
-                    >Read More</a
-                  >
+                <button class="btn bg-[#e76f51] text-white font-bold">
+                  Read More
                 </button>
               </div>
             </div>
