--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Biker Zone</title>
+    <!-- font-awesome-icons-->
+    <script
+      src="https://kit.fontawesome.com/5d970a6637.js"
+      crossorigin="anonymous"
+    ></script>
     <!-- google-fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -173,7 +178,7 @@
               <img src="./images/others/latest1.png" alt="Shoes" />
             </figure>
             <div class="card-body p-0 mt-4">
-              <h2 class="card-title md:text-2xl text-xl">
+              <h2 class="card-title md:text-2xl text-xl lg:text-xl xl:text-2xl">
                 Ducati XDIAVEL S-73
               </h2>
               <p class="mb-4 text-gray-500">
@@ -193,7 +198,7 @@
               <img src="./images/others/latest2.png" alt="Shoes" />
             </figure>
             <div class="card-body p-0 mt-4">
-              <h2 class="card-title md:text-2xl text-xl">
+              <h2 class="card-title md:text-2xl text-xl lg:text-xl xl:text-2xl">
                 Motorcycles & Scooters
               </h2>
               <p class="mb-4 text-gray-500">
@@ -213,7 +218,9 @@
               <img src="./images/others/latest3.png" alt="Shoes" />
             </figure>
             <div class="card-body p-0 mt-4">
-              <h2 class="card-title md:text-2xl text-xl">2021 Honda CBR500R</h2>
+              <h2 class="card-title md:text-2xl text-xl lg:text-xl xl:text-2xl">
+                2021 Honda CBR500R
+              </h2>
               <p class="mb-4 text-gray-500">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
                 fermentum amet faucibus sed id nisi lectus at.
@@ -222,6 +229,93 @@
                 <button class="btn bg-[#e76f51] text-white font-bold">
                   Read More
                 </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- happy client -->
+      <section class="mt-24">
+        <div
+          class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5 justify-items-center"
+        >
+          <div class="card bg-base-100 xl:w-96 shadow-sm">
+            <figure class="px-10 pt-10">
+              <img
+                src="./images/others/user-1.png"
+                alt="Shoes"
+                class="rounded-full w-[149px]"
+              />
+            </figure>
+            <div class="card-body items-center text-center text-gray-500 px-10">
+              <p>
+                Slate helps you see how many more days you need to work to reach
+                your financial goal for the month and year.
+              </p>
+              <div class="space-y-3">
+                <div class="custom-color">
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-regular fa-star"></i>
+                </div>
+                <h5 class="text-sm text-sky-500 font-semibold">Regina Miles</h5>
+                <p class="text-sm font-semibold text-black">Banker</p>
+              </div>
+            </div>
+          </div>
+          <!-- card-2 -->
+          <div class="card bg-base-100 xl:w-96 shadow-sm">
+            <figure class="px-10 pt-10">
+              <img
+                src="./images/others/user-2.png"
+                alt="Shoes"
+                class="rounded-full w-[149px]"
+              />
+            </figure>
+            <div class="card-body items-center text-center text-gray-500 px-10">
+              <p>
+                Slate helps you see how many more days you need to work to reach
+                your financial goal for the month and year.
+              </p>
+              <div class="space-y-3">
+                <div class="custom-color">
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-regular fa-star"></i>
+                </div>
+                <h5 class="text-sm text-sky-500 font-semibold">Regina Miles</h5>
+                <p class="text-sm font-semibold text-black">Banker</p>
+              </div>
+            </div>
+          </div>
+          <!-- user-3 -->
+          <div class="card bg-base-100 xl:w-96 shadow-sm">
+            <figure class="px-10 pt-10">
+              <img
+                src="./images/others/user-3.png"
+                alt="Shoes"
+                class="rounded-full w-[149px]"
+              />
+            </figure>
+            <div class="card-body items-center text-center text-gray-500 px-10">
+              <p>
+                Slate helps you see how many more days you need to work to reach
+                your financial goal for the month and year.
+              </p>
+              <div class="space-y-3">
+                <div class="custom-color">
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-regular fa-star"></i>
+                </div>
+                <h5 class="text-sm text-sky-500 font-semibold">Regina Miles</h5>
+                <p class="text-sm font-semibold text-black">Banker</p>
               </div>
             </div>
           </div>
