--- a/index.html
+++ b/index.html
@@ -236,6 +236,9 @@
       </section>
       <!-- happy client -->
       <section class="mt-24">
+        <h1 class="lg:text-5xl text-2xl font-semibold text-center mb-11">
+          Happy <span class="custom-color">Clients says</span>
+        </h1>
         <div
           class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5 justify-items-center"
         >
@@ -316,6 +319,80 @@
                 </div>
                 <h5 class="text-sm text-sky-500 font-semibold">Regina Miles</h5>
                 <p class="text-sm font-semibold text-black">Banker</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- frequently asked question -->
+      <section class="mt-24">
+        <h1 class="lg:text-5xl text-2xl font-semibold text-center mb-11">
+          Frequently Asked <span class="custom-color">Question</span>
+        </h1>
+        <div class="flex flex-col lg:flex-row gap-10">
+          <div class="flex-1 justify-items-center">
+            <img
+              src="./images/Frame.png"
+              alt=""
+              class="w-[432px] md:w-5/6 lg:w-[432px]"
+            />
+          </div>
+          <div class="flex-1 space-y-5">
+            <div
+              class="collapse collapse-arrow bg-base-100 border border-base-300"
+            >
+              <input type="radio" name="my-accordion-2" checked="checked" />
+              <div class="collapse-title font-semibold">
+                What are the most important things I should know about riding a
+                bike?
+              </div>
+              <div class="collapse-content text-sm">
+                Safety First! Always obey the rules of the road. Obey all
+                traffic signals, signs, and laws. Get in the mindset of
+                “driving” your bike—not just “riding” your bike. This will help
+                you be a more focused and legally compliant bike rider.
+              </div>
+            </div>
+            <div
+              class="collapse collapse-arrow bg-base-100 border border-base-300"
+            >
+              <input type="radio" name="my-accordion-2" />
+              <div class="collapse-title font-semibold">
+                How can I tell if my helmet is old and I need a new one?
+              </div>
+              <div class="collapse-content text-sm">
+                Safety First! Always obey the rules of the road. Obey all
+                traffic signals, signs, and laws. Get in the mindset of
+                “driving” your bike—not just “riding” your bike. This will help
+                you be a more focused and legally compliant bike rider.
+              </div>
+            </div>
+            <div
+              class="collapse collapse-arrow bg-base-100 border border-base-300"
+            >
+              <input type="radio" name="my-accordion-2" />
+              <div class="collapse-title font-semibold">
+                My bike has been in storage is it safe to ride?
+              </div>
+              <div class="collapse-content text-sm">
+                Safety First! Always obey the rules of the road. Obey all
+                traffic signals, signs, and laws. Get in the mindset of
+                “driving” your bike—not just “riding” your bike. This will help
+                you be a more focused and legally compliant bike rider.
+              </div>
+            </div>
+            <div
+              class="collapse collapse-arrow bg-base-100 border border-base-300"
+            >
+              <input type="radio" name="my-accordion-2" />
+              <div class="collapse-title font-semibold">
+                What rules should I follow when riding my bike?
+              </div>
+              <div class="collapse-content text-sm">
+                Safety First! Always obey the rules of the road. Obey all
+                traffic signals, signs, and laws. Get in the mindset of
+                “driving” your bike—not just “riding” your bike. This will help
+                you be a more focused and legally compliant bike rider.
               </div>
             </div>
           </div>
