footer section completetd

--- a/index.html
+++ b/index.html
@@ -399,6 +399,40 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer class="bg-[#0B0D17] mt-24">
+      <section class="xl:container w-9/10 mx-auto text-white">
+        <div class="flex flex-col md:flex-row gap-10 py-14">
+          <div class="flex-1 text-base space-y-4">
+            <div>
+              <span class="mr-4">Download Now</span>
+              <span>License</span>
+            </div>
+            <div>
+              <span>About</span>
+              <span class="mr-4">Features</span>
+              <span class="mr-4">Pricing</span>
+              <span class="mr-4">Careers</span>
+              <span class="mr-4">Help</span>
+              <span class="mr-4">Privacy Policy</span>
+            </div>
+            <div>
+              <span class="text-sm font-light hidden md:block"
+                >© 2020 bike. All rights reserved</span
+              >
+            </div>
+          </div>
+          <div class="space-y-4">
+            <h2 class="text-xl">Get the App</h2>
+            <img src="./images/others/android.png" alt="" class="w-[135px]" />
+            <img src="./images/others/ios.png" alt="" class="w-[135px]" />
+          </div>
+          <div class="md:hidden inline-flex justify-center">
+            <span class="text-sm font-light"
+              >© 2020 bike. All rights reserved</span
+            >
+          </div>
+        </div>
+      </section>
+    </footer>
   </body>
 </html>
